fixed centering issue on safari mobile

--- a/styles/Bio.module.css
+++ b/styles/Bio.module.css
@@ -18,9 +18,9 @@
 
 .trainerImage {
     min-width: 100px;
-    width: 25%;
+    width: 150px;
     min-height: 100px;
-    height: 25%;
+    height: 150px;
     border-radius: 100%;
     background-color: white;
 }
